stop horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 html, body {
   width: 100%;
+  max-width: 100%;
   min-height: 100%;
   overflow-x: hidden;
   touch-action: manipulation;
